--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"></html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="../static/css/main.css" />
 </head>
-    <link th:href="@{/css/css.css}" rel="stylesheet" />
 
 <body>
+    <section id="main_home">
+        <div id="first_block">
 
-    안녕
+gdgdgsagdsaf
+        </div>
+
+    </section>
+
 </body>
 </html>
