--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,17 +12,15 @@
             <div class = "login-form-container shadow">
                 <div class="login-form-right-side">
                     <div class="top-logo-wrap">
-                        
+                        <img  width="90%" src="../static/images/logos.png">
                     </div>
-                    <h1> main logo </h1>
-                    <p> company name</p>
                 </div>
                 
                 <div class="login-form-left-side">
                     <div class="login-top-wrap">
                         <p> Join Us! </p>
                     </div>
-                    <div class="login-input container">
+                    <div class="login-input container" >
                         <div class="login-Google">
                             <a href="#"> <img class="loginlogos" src="../static/images/googlelogin.png"> </a>
                         </div>
