--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,13 +1,34 @@
 
-
-#main_home{
-    width : 100%;
-    background-color: pink;
-	height: auto;
+*{
+    margin:0;
+    padding:0;
 }
-#first_block{
-	height: 500px;
-    background-image: url("../images/main_image.jpg");
-    background-repeat: no-repeat;
+#main_wrap { }
+#mv{
+    width : 100%;
+	height: 700px;
+	background: #000;
+}
+#mv > div {
+    background-image: url("../images/maamin.jpg");
+   /* background-color: #fffaf2;*/
+	height: 700px;
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: cover;
+	background-attachment: fixed;
+}
 
+#no_mv{
+    /*position: relative;*/
+    width :1300px;
+    height: 1000px;
+    background-color: #fff;
+    margin: -70px auto 0;
+}
+#second_block{
+    margin : 0 auto;
+    height: 300px;
+    background-color: pink;
+	text-align: center;
 }
