--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -8,13 +8,25 @@
 </head>
 
 <body>
-    <section id="main_home">
-        <div id="first_block">
 
-gdgdgsagdsaf
+    <div id="main_wrap">
+
+        <div id="mv">
+            <div id="first_block">
+                <h1>No.1 <br>
+                    Credit Card Application Website </h1>
+                <p> 00카드는 모든 신용카드 다 준다 아아아아아소개소개소개 </p>
+            </div>
         </div>
 
-    </section>
+        <div id="no_mv">
+            <div id="second_block">
+                <h3> 우리 홈페이지에서 카드 신청ㅎ ㅐ</h3>
+            </div>
+        </div>
 
+
+
+    </div>
 </body>
 </html>
