--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -18,6 +18,9 @@
 	background-size: cover;
 	background-attachment: fixed;
 }
+.first_info{
+}
+
 
 #no_mv{
     /*position: relative;*/
@@ -26,6 +29,8 @@
     background-color: #fff;
     margin: -70px auto 0;
 }
+
+
 #second_block{
     margin : 0 auto;
     height: 300px;
