--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <link rel="stylesheet" href="../static/css/header.css" />
     <link rel="stylesheet" href="../static/css/main.css" />
 </head>
 
@@ -17,7 +19,7 @@
             <div id="first_block">
                 <div class="first_info">
                     <h1>No.1 <br>
-                        Credit Card Application Website </h1>
+                        Credit Card Application Website </h1><br>
                     <p> 00신용카드 소개글 홈페이지 입니다 </p>
                 </div>
 
