--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -6,19 +6,25 @@
 #main_wrap { }
 #mv{
     width : 100%;
-	height: 700px;
+	height: 900px;
 	background: #000;
 }
 #mv > div {
     background-image: url("../images/maamin.jpg");
    /* background-color: #fffaf2;*/
-	height: 700px;
+	height: 900px;
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: cover;
 	background-attachment: fixed;
+
 }
 .first_info{
+    position: absolute;
+    top: 30%;
+    left: 15%;
+
+
 }
 
 
@@ -28,6 +34,7 @@
     height: 1000px;
     background-color: #fff;
     margin: -70px auto 0;
+    box-shadow: 3px 3px 15px rgb(0 0 0 / 15%);
 }
 
 
