--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -3,16 +3,25 @@
     margin:0;
     padding:0;
 }
+ul,ol,li{
+		list-style-type: none;
+}
 #main_wrap { }
+#main_wrap h2{
+   padding : 30px;
+   text-align: center;
+   font-size : 35px;
+}
+/*메인 홈*/
 #mv{
     width : 100%;
-	height: 900px;
+	height: 800px;
 	background: #000;
 }
 #mv > div {
     background-image: url("../images/maamin.jpg");
    /* background-color: #fffaf2;*/
-	height: 900px;
+	height: 800px;
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: cover;
@@ -20,14 +29,12 @@
 
 }
 .first_info{
-    position: absolute;
-    top: 30%;
+    position: relative;
+    top: 40%;
     left: 15%;
-
-
 }
 
-
+/*하단 홈*/
 #no_mv{
     /*position: relative;*/
     width :1300px;
@@ -36,11 +43,33 @@
     margin: -70px auto 0;
     box-shadow: 3px 3px 15px rgb(0 0 0 / 15%);
 }
-
-
 #second_block{
     margin : 0 auto;
     height: 300px;
     background-color: pink;
 	text-align: center;
+}
+
+/*카드 랜덤 추천*/
+#third_block{
+    background-color: gray;
+    height:700px;
+}
+
+#third_block .randomCard{
+    float : left;
+    border-radius : 20px;
+    width : 380px;
+    height : 510px;
+    background-color: yellow;
+    text-align:center;
+    margin: 0 10px;
+}
+
+#third_block .randomCard img{
+    width : 290px;
+    margin : 100px 0;
+}
+#third_block .randomCard p{
+    font-size : 24px;
 }
