--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -12,13 +12,17 @@
         <div id="logo">
             logo들어갈 자리
         </div>
+        <hr>
         <div id="menu_bar">
-            <ul>
-                <li> <a href="#"> 차트 </a></li>
-                <li> <a href="#"> 조건검색 </a></li>
-                <li> <a href="#"> 카드사 </a></li>
-                <li> <a href="#"> 문의 </a></li>
-            </ul>
+            <div id="menu_inner">
+                <ul>
+                    <li> <a href="#"> 차트 </a></li>
+                    <li> <a href="#"> 조건검색 </a></li>
+                    <li> <a href="#"> 카드사 </a></li>
+                    <li> <a href="#"> 문의 </a></li>
+                    <li class="loginBtn"> <a href="#"> <img src="../static/images/login.png">  </a></li>
+                </ul>
+            </div>
         </div>
 
     </header>
