--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -6,6 +6,10 @@
 ul,ol,li{
 		list-style-type: none;
 }
+a{
+    text-decoration: none;
+ 		color : black;
+ }
 #main_wrap { }
 #main_wrap h2{
    padding : 30px;
@@ -15,13 +19,13 @@ ul,ol,li{
 /*메인 홈*/
 #mv{
     width : 100%;
-	height: 800px;
+	height: 900px;
 	background: #000;
 }
 #mv > div {
     background-image: url("../images/maamin.jpg");
    /* background-color: #fffaf2;*/
-	height: 800px;
+	height: 900px;
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: cover;
@@ -52,24 +56,39 @@ ul,ol,li{
 
 /*카드 랜덤 추천*/
 #third_block{
-    background-color: gray;
     height:700px;
 }
 
 #third_block .randomCard{
+   /* background-image: url("../images/cardback.jpg");*/
+    background-repeat: no-repeat;
+    background-position: center center;
+	background-size: cover;
+   /* filter:blur(3px);*/
+
     float : left;
     border-radius : 20px;
     width : 380px;
     height : 510px;
-    background-color: yellow;
     text-align:center;
     margin: 0 10px;
+    box-shadow: 3px 3px 15px rgb(0 0 0 / 10%);
 }
 
 #third_block .randomCard img{
     width : 290px;
-    margin : 100px 0;
+    margin : 110px 0;
+    transition:all 0.4s;
 }
 #third_block .randomCard p{
     font-size : 24px;
+}
+#third_block a:hover .randomCard{
+   background-color: rgba(20,20,20,0.2);
+   opacity: 1;
+   transition:all 1s;
+}
+#third_block a:hover .randomCard img{
+   transform: rotate(90deg);
+   transition:all 0.4s;
 }
