--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -36,6 +36,7 @@ a{
     position: relative;
     top: 40%;
     left: 15%;
+    font-size : 25px;
 }
 
 /*하단 홈*/
@@ -47,11 +48,76 @@ a{
     margin: -70px auto 0;
     box-shadow: 3px 3px 15px rgb(0 0 0 / 15%);
 }
+
+/*솔루션*/
 #second_block{
+    max-width:1100px;
+    width:100%;
     margin : 0 auto;
-    height: 300px;
+    height: 550px;
 	text-align: center;
 }
+#second_block ul > li > a{
+    display:block;
+    width:auto;
+    margin:5px;
+}
+#second_block .screen{
+    position:relative;
+    overflow:hidden;
+}
+
+#second_block .show{
+        width: 130px;
+       height: 130px;
+       line-height: 130px;
+       font-size: 30px;
+       border-radius: 50%;
+       transition: 0.3s;
+}
+#second_block li:nth-child(2) .show{
+      margin-left:150px;
+}
+#second_block li:nth-child(3) .show{
+      margin-left:300px;
+}
+
+#second_block .screen .slide{
+    position:absolute;
+    bottom: 40%;
+    left: -150%;
+    font-size : 25px;
+    z-index:2;
+    color:#5a5a5a;
+}
+#second_block a:hover .show{
+	background-color: #f8efed;
+    font-size : 35px;
+       transition: 0.3s;
+
+}
+
+#second_block a:hover ul{
+	background-color: pink;
+}
+
+#second_block li:nth-child(1) a:hover .slide{
+    left:20%;
+    transition:all 0.4s;
+}
+#second_block li:nth-child(1) a:hover #second_block{
+
+	background-color: pink;
+}
+#second_block li:nth-child(2) a:hover .slide{
+    left:33%;
+    transition:all 0.4s;
+}
+#second_block li:nth-child(3) a:hover .slide{
+    left:47%;
+    transition:all 0.4s;
+}
+
 
 /*카드 랜덤 추천*/
 #third_block{
@@ -60,11 +126,9 @@ a{
     background-color: #e6ecf7;
     padding: 0 40px;
     background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
 }
 #third_block .randomCard{
-   /* background-image: url("../images/cardback.jpg");
+   /*background-image: url("../images/cardBack.png");
     background-repeat: no-repeat;
     background-position: center center;
 	background-size: cover;
