--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -44,9 +44,34 @@
 
         <div id="no_mv">
             <div id="second_block">
-                <h2> 나에게 맞는 카드는 ?</h2>
+                <h2> 고객을 위한 최적의 카드 솔루션 </h2>
+                <ul>
+                    <li>
+                        <a href="#">
+                            <div class="screen">
+                                <div class="show">차트</div>
+                                <div class="slide">어떤 신용카드가 인기가 많은지 확인해보세요! </div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="screen">
+                                <div class="show">검색</div>
+                                 <div class="slide">나에게 맞는 조건으로 검색해보세요!</div>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <div class="screen">
+                                <div class="show">문의</div>
+                                 <div class="slide">그래도 고민되신다면 카드추천 문의를 이용해보세요!</div>
+                            </div>
+                        </a>
+                    </li>
 
-                <p>간편하게 </p>
+                </ul>
             </div>
 
             <div id="third_block">
