[Front] 카드솔루션 2ver . 호버시 밑줄 효과

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -44,7 +44,7 @@
 
         <div id="no_mv">
             <div id="second_block">
-                <h2> 고객을 위한 최적의 카드 솔루션 </h2>
+                <h2> 고객을 위한 최적의 <span>카드 솔루션</span> </h2>
                 <ul>
                     <li>
                         <a href="#">
@@ -75,7 +75,7 @@
             </div>
 
             <div id="third_block">
-                <h2> 오늘의 카드 추천 </h2>
+                <h2> 오늘의 <span>카드 추천</span> </h2>
                 <ul>
                     <a href="#">
                         <li class="randomCard">
