--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -16,6 +16,10 @@ a{
    text-align: center;
    font-size : 35px;
 }
+#main_wrap span{
+     background-color: rgba(80, 255, 0, 0.3);
+}
+
 /*메인 홈*/
 #mv{
     width : 100%;
@@ -30,7 +34,6 @@ a{
 	background-position: center center;
 	background-size: cover;
 	background-attachment: fixed;
-
 }
 .first_info{
     position: relative;
@@ -56,6 +59,7 @@ a{
     margin : 0 auto;
     height: 550px;
 	text-align: center;
+
 }
 #second_block ul > li > a{
     display:block;
@@ -73,7 +77,7 @@ a{
        line-height: 130px;
        font-size: 30px;
        border-radius: 50%;
-       transition: 0.3s;
+       background-color: #f8efed;
 }
 #second_block li:nth-child(2) .show{
       margin-left:150px;
@@ -85,38 +89,41 @@ a{
 #second_block .screen .slide{
     position:absolute;
     bottom: 40%;
-    left: -150%;
+    left:20%;
     font-size : 25px;
     z-index:2;
     color:#5a5a5a;
 }
-#second_block a:hover .show{
-	background-color: #f8efed;
-    font-size : 35px;
-       transition: 0.3s;
-
+#second_block li:nth-child(2) .slide{
+   left:33%;
 }
-
-#second_block a:hover ul{
-	background-color: pink;
-}
-
-#second_block li:nth-child(1) a:hover .slide{
-    left:20%;
-    transition:all 0.4s;
-}
-#second_block li:nth-child(1) a:hover #second_block{
-
-	background-color: pink;
-}
-#second_block li:nth-child(2) a:hover .slide{
-    left:33%;
-    transition:all 0.4s;
-}
-#second_block li:nth-child(3) a:hover .slide{
+#second_block li:nth-child(3) .slide{
     left:47%;
-    transition:all 0.4s;
 }
+
+/*솔루션 밑줄*/
+#second_block .slide{
+    position:relative;
+}
+#second_block .slide:after{
+    content:'';
+    position:absolute;
+    left:0;
+    bottom: -10px;
+    width:0px;
+    height:3px;
+    margin: 5px 0 0;
+     transition: 1s;
+     opacity: 0;
+     background-color: #FFB0CF;
+}
+
+#second_block li:hover .slide:after{
+  width: 100%;
+  opacity: 1;
+}
+
+
 
 
 /*카드 랜덤 추천*/
