--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -38,7 +38,6 @@
                         Credit Card Application Website </h1><br>
                     <p> 00신용카드 소개글 홈페이지 입니다 </p>
                 </div>
-
             </div>
         </div>
 
@@ -58,7 +57,7 @@
                         <a href="#">
                             <div class="screen">
                                 <div class="show">검색</div>
-                                 <div class="slide">나에게 맞는 조건으로 검색해보세요!</div>
+                                 <div class="slide">자신에게 맞는 조건으로 검색해보세요!</div>
                             </div>
                         </a>
                     </li>
@@ -85,12 +84,14 @@
                     </a>
                     <a href="#">
                         <li class="randomCard">
-
+                            <img src="../static/images/카드2.png">
+                            <p>신한 DEEP MAKING</p>
                         </li>
                     </a>
                     <a href="#">
                         <li class="randomCard">
-
+                            <img src="../static/images/카드3.png">
+                            <p>신한 DEEP MAKING</p>
                         </li>
                     </a>
                  </ul>
