--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -10,7 +10,9 @@
 <body>
     <header id="head">
         <div id="logo">
-            logo들어갈 자리
+            <img src="../static/images/logo1.png" class="logoname">
+            <img src="../static/images/logo2.png">
+            <img src="../static/images/logo3.png" class="logoname">
         </div>
         <hr>
         <div id="menu_bar">
