--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,13 +12,14 @@
             <div class = "login-form-container shadow">
                 <div class="login-form-right-side">
                     <div class="top-logo-wrap">
-                        <img  width="90%" src="../static/images/logos.png">
+                        <img  width="90%" src="../static/images/mainlogo.png">
                     </div>
                 </div>
                 
                 <div class="login-form-left-side">
                     <div class="login-top-wrap">
-                        <p> Join Us! </p>
+                        <p class="top-message"> SOCIAL LOGIN </p>
+                        <p> Choose your Login type</p>
                     </div>
                     <div class="login-input container" >
                         <div class="login-Google">
