--- a/src/main/resources/static/css/cardSearch.css
+++ b/src/main/resources/static/css/cardSearch.css
@@ -14,7 +14,7 @@ a{
  #searchWrap{
     margin: 0 auto;
     height: auto;
-    background-color : pink;
+    background-color : #e6ecf7;
  }
 
  /*소제목*/
@@ -22,7 +22,7 @@ a{
     margin: 0 auto;
     width: 100%;
     height : auto;
-    background-color : orange;
+    background-color : #fff;
  }
  #subtitle h1{
     margin: 0 auto;
@@ -40,7 +40,9 @@ a{
     padding : 50px;
  }
  #searchInfo div{
-    margin-bottom : 40px;
+    margin-bottom : 15px;
+    background-color : #fff;
+    padding : 30px;
  }
  #searchInfo p{
     font-size : 25px;
@@ -50,7 +52,30 @@ a{
     width: 110px;
     height: 70px;
     font-size : 18px;
+    margin-right : 10px;
+    border-radius : 10px;
 }
+#searchInfo input:hover {
+    background-color : #cccccc;
+}
+
+#searchInfo #submit{
+   text-align : center;
+    background-color : #e6ecf7;
+}
+#searchInfo #submit input{
+    width: 150px;
+    height: 80px;
+    margin-right : 90px;
+    background-color : rgba(204,153,255, 0.5);
+
+}
+#searchInfo #submit input:hover{
+    background-color : rgba(204,153,255, 1);
+     transition: 0.3s;
+
+}
+
 /*클릭 후*/
 #searchInfo #gender input:selected{
 }
