--- a/src/main/resources/templates/cardSearch.html
+++ b/src/main/resources/templates/cardSearch.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="../static/css/header.css" />
     <link rel="stylesheet" href="../static/css/cardSearch.css" />
+    <link rel="stylesheet" href="../static/css/footer.css" />
 
 </head>
 
@@ -23,7 +24,7 @@
                 <div id="searchInfo">
                     <div id="gender">
                         <p>성별</p>
-                        <input type="button" value="여자">
+                        <input type="button" value="여자" name = "gender">
                         <input type="button" value="남자">
                     </div>
                      <div id="age">
