--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -48,12 +48,13 @@
 
     flex-direction: column;
     align-items: center;
-    padding: 40px;
+    padding: 80px 40px 40px 40px;
 }
 .loginlogos{
 
     width: 300px;
     height 100px;
+    padding : 10px;
 }
 .login-input-container{
 
@@ -61,4 +62,8 @@
 }
 .top-message{
     font-size:30px;
+}
+.choose-message{
+    padding:8px;
+    text-align: center;
 }
