[front] top10차트 table버전

--- a/src/main/resources/templates/card_chart.html
+++ b/src/main/resources/templates/card_chart.html
@@ -20,18 +20,28 @@
                 <h1> 카드 TOP10 </h1>
             </div>
 
-           <div id="chartInfo">
-               <ul>
-                   <li>
-                       <div class="num"width="100px">1</div> <!--순위-->
-                       <div> <img src="../static/images/카드1.png"> </div><!--사진-->
-                       <div> 신한 DEEP MAKING</div><!--카드이름-->
-                       <div> 신한카드</div><!--카드사-->
-                       <div> 자세히보기 </div>
-                   </li>
+           <table id="chartInfo">
+                   <tr>
+                       <td class="num" rowspan="2" width="100px">1</td> <!--순위-->
+                       <td rowspan="2" width="220px"><center> <img src="../static/images/카드1.png"></center> </td><!--사진-->
+                       <td class="name" width="750px"> 신한 DEEP MAKING</td><!--카드이름-->
+                       <td rowspan="2"> 자세히보기 </td>
+                   </tr>
+                   <tr>
+                       <td> 신한카드 </td><!--카드사-->
+                   </tr>
 
-               </ul>
-           </div>
+                   <tr>
+                       <td class="num" rowspan="2" width="100px">1</td> <!--순위-->
+                       <td rowspan="2" width="220px"><center> <img src="../static/images/카드2.png"></center> </td><!--사진-->
+                       <td class="name" width="750px"> 신한 DEEP MAKING</td><!--카드이름-->
+                       <td rowspan="2"> 자세히보기 </td>
+                   </tr>
+                   <tr>
+                       <td> 신한카드 </td><!--카드사-->
+                   </tr>
+
+           </table>
 
     </div>
 
