--- a/src/main/resources/static/css/card_chart.css
+++ b/src/main/resources/static/css/card_chart.css
@@ -39,22 +39,18 @@ a{
     margin: 0 auto;
     padding : 50px;
     font-size : 20px;
+    border-collapse: collapse;
  }
-  #chartInfo li{
-  }
+ tbody{
+    padding:30px;
+    background-color : pink;
+ }
+
  #chartInfo .num{
     text-align:center;
     font-size : 45px;
-    position: relative;
-    top:50%;
-    left: 0;
-    display:inline;
-    padding: 30px;
   }
  #chartInfo img{
-    position: relative;
-    top:50%;
-    left:15%;
     width : 130px;
  }
   #chartInfo .name{
