--- a/src/main/resources/templates/board_write.html
+++ b/src/main/resources/templates/board_write.html
@@ -1,36 +1,40 @@
-<html xmlns:th="http://www.thymleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml" lang="ko">
+<html xmlns:th="http://www.thymleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.w3.org/1999/xhtml" lang="ko">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>reservation page</title>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.js" integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script>
-  <script defer src="https://code.jquery.com/jquery-3.5.1.js"></script>
+  <title>Inquire board</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-  <link
-          rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-          crossorigin="anonymous"
+  <link rel="stylesheet"
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
   />
+  <!--    <script src="https://code.jquery.com/jquery-3.5.1.slim.js" integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script>-->
+  <!--    <script defer src="https://code.jquery.com/jquery-3.5.1.js"></script>-->
+  <!--    <script defer src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>-->
 
-  <link rel="stylesheet" th:href="@{/static/css/header.css}" />
-  <script th:src="@{/static/js/form_inquiry.js}"></script>
+
+
+  <link rel="stylesheet" href="../static/css/header.css" />
+  <link rel="stylesheet" href="../static/css/main.css" />
+  <link rel="stylesheet" href="../static/css/footer.css" />
 </head>
 
-
 <body>
+<th:block th:replace="header:: header"></th:block>
+
       <div class="container">
-      <th:block th:replace="header:: header"></th:block>
+
       <div class="text-center">
         <p class="h4">문의 게시판</p>
-        <p class="h2">-----------</p>
+        <p class="h2" style="border-bottom: black 3px solid;"></p>
         <br>
         <br>
         <br>
        </div>
 
        <form method="post" action="/post" id="form">
-         <input type="hidden" th:name="값" th:value="값2">
+
+         <input type="hidden">
 
          <div class="form-group">
            <label>문의 제목</label>
