[front] 카드리스트 프론트 완성

--- a/src/main/resources/templates/card_list.html
+++ b/src/main/resources/templates/card_list.html
@@ -20,21 +20,46 @@
             <h1> 카드List </h1>
         </div>
 
-        <table id="listInfo">
-            <tr>
-                <td> <img src="../static/images/카드1.png"> </td><!--사진-->
-                <td rowspan="3"> </td><!--혜택1 아이콘-->
-                <td rowspan="3"> </td><!--혜택2 아이콘-->
-                <td rowspan="3"> </td><!--혜택3 아이콘-->
-                <td rowspan="3"> 자세히보기 </td>
-            </tr>
-            <tr>
-                <td class="name"> 신한 DEEP MAKING</td><!--카드이름-->
-            </tr>
-            <tr>
-                <td> 신한카드</td><!--카드사-->
-            </tr>
-        </table>
+        <div id="listInfo">
+            <ul>
+                <li id="onecard">
+                    <img src="../static/images/카드1.png"> <!--사진-->
+                    <div class="text">
+                        <p class="name">신한 DEEP MAKING</p> <!--카드이름-->
+                        <p>신한카드</p> <!--카드사-->
+                    </div>
+                    <div class="benefits">
+                        <div class="icon"><img src="../static/images/통신2.png"> </div>   <!--혜택1 아이콘-->
+                        <div class="icon"><img src="../static/images/주유.png"> </div>
+                        <div class="icon"><img src="../static/images/쇼핑.png"> </div>
+                    </div>
+                    <a class="more"> 상세 보기</a>
+                    <div class="condition">
+                        <p>연회비 20,000원 | 전월실적 30만원</p>
+                        <p class="cart"> 아이콘 + 비교함 담기</p>
+                    </div>
+                </li>
+
+                <li id="onecard">
+                    <img src="../static/images/카드1.png"> <!--사진-->
+                    <div class="text">
+                        <p class="name">신한 DEEP MAKING</p> <!--카드이름-->
+                        <p>신한카드</p> <!--카드사-->
+                    </div>
+                    <div class="benefits">
+                        <div class="icon"><img src="../static/images/통신2.png"> </div>   <!--혜택1 아이콘-->
+                        <div class="icon"><img src="../static/images/주유.png"> </div>
+                        <div class="icon"><img src="../static/images/쇼핑.png"> </div>
+                    </div>
+                    <a class="more"> 상세 보기</a>
+                    <div class="condition">
+                        <p>연회비 20,000원 | 전월실적 30만원</p>
+                        <p class="cart"> 아이콘 + 비교함 담기</p>
+                    </div>
+                </li>
+            </ul>
+
+        </div>
 
     </div>
 
