[front] 카드리스트 프론트 완성

--- a/src/main/resources/templates/card_list.html
+++ b/src/main/resources/templates/card_list.html
@@ -41,7 +41,7 @@
                 </li>
 
                 <li id="onecard">
-                    <img src="../staic/images/카드1.png"> <!--사진-->
+                    <img src="../static/images/카드1.png"> <!--사진-->
                     <div class="text">
                         <p class="name">신한 DEEP MAKING</p> <!--카드이름-->
                         <p>신한카드</p> <!--카드사-->
