[front] 카드차트 프론트 완성

--- a/src/main/resources/templates/card_list.html
+++ b/src/main/resources/templates/card_list.html
@@ -33,7 +33,7 @@
                         <div class="icon"><img src="../static/images/주유.png"> </div>
                         <div class="icon"><img src="../static/images/쇼핑.png"> </div>
                     </div>
-                    <a class="more"> 상세 보기</a>
+                    <a href="#" class="more"> 상세 보기</a>
                     <div class="condition">
                         <p>연회비 20,000원 | 전월실적 30만원</p>
                         <p class="cart"> 아이콘 + 비교함 담기</p>
