--- a/src/main/resources/templates/admin_CardCompanyList.html
+++ b/src/main/resources/templates/admin_CardCompanyList.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" th:href="@{/static/css/header.css}" />
     <link rel="stylesheet" href="../static/css/footer.css" />
-    <link rel="stylesheet" href="../static/css/admin_cardlist.css"/>
+    <link rel="stylesheet" href="../static/css/admin_cardcompanylist.css"/>
 
 </head>
 <body>
@@ -22,11 +22,11 @@
     <div class="container">
 
 
-        <p><h1 class="title">카드 목록</h1></p>
+        <p><h1 class="title">카드사 목록</h1></p>
 
 
         <ul class="nav nav-pills justify-content-end" style="margin-bottom:20px; margin-top:70px;">
-            <li><a href="#"><h3 id="links1">카드사 목록</h3></a></li>
+            <li><a href="#"><h3 id="links1">카드 목록</h3></a></li>
                <li><a href="#"><h3 id="links2">카드사 등록</h3></a></li>
                <li><a href="#"><h3 id="links3">카드 등록</h3></a></li>
 
@@ -35,9 +35,9 @@
         <table class="table table-hover" id="table1">
 
             <tr id="head">
-                <th width="200">카드명</th>
-                <th width="200">카드사</th>
-                <th width="200">카드 사진</th>
+                <th width="200">카드사 명</th>
+                <th width="200">등록 카드갯수</th>
+                <th width="200">카드사 로고</th>
                 <th></th>
                 <th></th>
 
