--- a/src/main/resources/static/css/card_list.css
+++ b/src/main/resources/static/css/card_list.css
@@ -44,9 +44,9 @@ a{
  #listInfo #onecard{
     background-color : #fff;
     height:220px;
-    width:100%;
     padding : 40px 50px;
     margin-bottom: 30px;
+        position : relative;
  }
  #listInfo img{
     width : 230px;
@@ -74,18 +74,18 @@ a{
        line-height: 140px;
        border-radius: 50%;
        background-color: #f8efed;
-       margin: 0 60px;
+       margin: 0 50px;
     }
   #listInfo .icon img{
     width:140px;
   }
 
    #listInfo .more{
-    position:relative;
-    top:-50%;
-    float: right;
+    position: absolute;
+    right: 3%;
+    float: right;카
     font-size : 20px;
-    padding: 112px 13px;
+    padding: 98px 13px;
     background-color:  rgba(204,153,255, 0.5);
     border-radius: 10px;
    }
@@ -98,7 +98,7 @@ a{
         font-size : 15px;
         position : relative;
         top: 78%;
-        left:-51%;
+        left:-55%;
     }
 
     #listInfo .cart{
@@ -110,7 +110,7 @@ a{
    #listInfo .condition img{
     width: 30px;
     position : absolute;
-    left:53%;
+    left:58%;
     padding:10px;
    }
       #listInfo .condition a:hover .cart{
