--- a/src/main/resources/templates/card_list.html
+++ b/src/main/resources/templates/card_list.html
@@ -36,7 +36,7 @@
                     <a href="#" class="more"> 상세 보기</a>
                     <div class="condition">
                         <p>연회비 30,000원 | 전월실적 30만원</p>
-                        <a href="#">  <img src="../static/images/add.png">  <p class="cart"> 비교함 담기</p></a>
+                        <a href="card_compare.html" th:href="@{/card/card_compare_page}">  <img src="../static/images/add.png">  <p class="cart"> 비교함 담기</p></a>
                     </div>
                 </li>
 
@@ -54,7 +54,7 @@
                     <a class="more"> 상세 보기</a>
                     <div class="condition">
                         <p>연회비 20,000원 | 전월실적 30만원</p>
-                        <a href="#">  <img src="../static/images/add.png">  <p class="cart"> 비교함 담기</p></a>
+                        <a href="card_compare.html" th:href="@{/card/card_compare_page}">  <img src="../static/images/add.png" >  <p class="cart"> 비교함 담기</p></a>
                     </div>
                 </li>
             </ul>
