관리자 카드/카드사리스트/등록 0429까지

--- a/src/main/resources/templates/admin_CardList.html
+++ b/src/main/resources/templates/admin_CardList.html
@@ -18,6 +18,26 @@
 </head>
 <body>
 <section>
+    <nav id="side_menu">
+        <h3>관리자 페이지</h3>
+
+        <ul class="nav nav-pills justify-content-end" style="margin-bottom:20px; margin-top:70px;">
+            <li>
+                <a href="#"><h4 id="links1">┖ 카드사 목록</h4></a>
+            </li>
+
+            <li>
+                <a href="#"><h4 id="links2">┖ 카드사 등록</h4></a>
+            </li>
+
+            <li>
+                <a href="#"><h4 id="links3">┖ 카드 &nbsp; &nbsp;등록</h4></a>
+            </li>
+
+        </ul>
+
+    </nav>
+
 
     <div class="container">
 
@@ -25,12 +45,6 @@
         <p><h1 class="title">카드 목록</h1></p>
 
 
-        <ul class="nav nav-pills justify-content-end" style="margin-bottom:20px; margin-top:70px;">
-            <li><a href="#"><h3 id="links1">카드사 목록</h3></a></li>
-               <li><a href="#"><h3 id="links2">카드사 등록</h3></a></li>
-               <li><a href="#"><h3 id="links3">카드 등록</h3></a></li>
-
-        </ul>
 
         <table class="table table-hover" id="table1">
 
